# Simulation_Studies

./: .gitignore  README.md  Time_of_Flight  configfile.py
.github/workflows/: geant4-ci.yml
CORSIKA/: README
CORSIKA-G4/: configfile.py
CORSIKA-G4/ASCII converter/: README.md
CORSIKA-G4/ASCII converter/binary_files_flujo_central_europe-60sec/: DAT001105  DAT001206  DAT001407  DAT001909  DAT002311  DAT003115  DAT003216  DAT003517  DAT004521  DAT004822  DAT005224  DAT005525  DAT005626
CORSIKA-G4/binary_files_flujo_central_europe-60sec/: DAT000703  DAT000904  DAT001608  DAT002010  DAT002412  DAT002713  DAT002814  DAT003919  DAT004018  DAT004020  DAT005123
CORSIKA/G4-interface/: README.md
CRY/: README  testMain.cc
Corsika/Cesar/: CorsikaPlotter.cc  CorsikaReader.cc  all-inputs
Corsika/Cesar/CRY/: setup.file
Digitizer-and-Clusterizer/: README  clustering_xy.py  muravessim_clustering.py
Flux/: README  mu_differential_flux.xlsx
Geant4-simulation/: CMakeLists.txt  G4History.macro  MuravesSim.cc  MuravesSim.hh  README.md  cmdgps.mac  geometry.mac  gps_beam_center.mac  run.mac  run_cont.mac
Geant4-simulation/HTCondor/: merge_and_store.sh  run_muraves.sh  sim_muraves.sub  test.sub
Geant4-simulation/include/: ActionInitialization.hh  EcoMug.h  GitVersion.hh.in  MuravesMessenger.hh  PhysicsList.hh  PolystyreneProperties.hh  PrimaryGeneratorAction_CRY.hh  PrimaryGeneratorAction_EcoMug.hh  RNGWrapper.hh  RunAction.hh  ScintBarHit.hh  ScintBarSD.hh  SteppingAction.hh  TrackingAction.hh
Geant4-simulation/src/: DetectorConstruction.cc  EventAction.cc  Materials.cc  PrimaryGeneratorAction_CRY.cc  PrimaryGeneratorAction_EcoMug.cc  PrimaryGeneratorAction_PG.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunInformation.cc  ScintBarHit.cc  ScintBarSD.cc  SteppingAction.cc  TrackingAction.cc
Geometry/: README
Geometry/Positioning/: README
Geometry/Vesuvius/: .gitattributes  README  vesuvio_Lidar_EGM2008_5000x3600.grd
MuravesSim/: CMakeCache.txt  CMakeLists.txt  GNUmakefile  MuravesSim.cc  MuravesSim.hh  README.md  push_test.txt  vis.mac
MuravesSim/ROOT files/: MuravesSim_1k_1cm_rectsource.root  MuravesSim_gps_10k.root
MuravesSim/include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  EventAction.hh  Hits.hh  MuravesMessenger.hh  PrimaryGeneratorAction_CRY.hh  PrimaryGeneratorAction_GenPartSrc.hh  PrimaryGeneratorAction_PartGun.hh  PrimaryGeneratorMessenger.hh  RNGWrapper.hh  ROOTManager.hh  RunAction.hh  SensitiveDetector.hh  TrackingAction.hh
MuravesSim/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  Hits.cc  MuravesMessenger.cc  PhysicsList.cc  PrimaryGeneratorAction_CRY.cc  PrimaryGeneratorAction_GenPartSrc.cc  PrimaryGeneratorAction_PartGun.cc  PrimaryGeneratorMessenger.cc  ROOTManager.cc  RunAction.cc  SensitiveDetector.cc  TrackingAction.cc
PUMAS-and-TURTLE/: README  README.md  Thicknesses_binnin033_completo.txt
PUMAS-and-TURTLE/Documentation/: README
PUMAS-and-TURTLE/Mariaelena/: SimulationTest.c
PUMAS-and-TURTLE/Mulder/: GMRT.asc  Readme.md  layer.py  transportEnergyLoop.py
PUMAS-and-TURTLE/Mulder/DensityResults/: README.md  fluxGiovanni265.txt  fluxGiovanni275.txt  fluxGiovanni285.txt  fluxGiovanni295.txt  fluxGiovanni305.txt  fluxGiovanni315.txt  fluxGiovanni325.txt  fluxGiovanni335.txt  fluxGiovanni344.txt
PUMAS-and-TURTLE/PUMAS23/: geometry.c
PUMAS-and-TURTLE/Results/: FluxPUMAS025_005.txt  Readme.md  Thickness_TURTLE_025_30.txt
PUMAS-and-TURTLE/TURTLE23/: example-projection.c  example-stepper.c
PythonScripts_and_Data/: muravessim_clustering.py  sample_cluster_data.csv
Sim_analysis/: NT_muons_analysis.ipynb  hit_analysis.ipynb  run_analysis.ipynb
Simulation_Dora/: CMakeLists.txt  MuravesSim.cc  MuravesSim.hh  README.md  exampleB5.cc  run2.mac
Simulation_Dora/CRY_PrimaryGenerator/: PrimaryGeneratorAction_CRY.cc  PrimaryGeneratorMessenger.hh
Simulation_Dora/HTCondor/: run_test.sh
Simulation_Dora/build-cont/: CMakeCache.txt  G4History.macro  Makefile  MuravesSim  cmake_install.cmake  cmd-cry-dora.file  cmdpartgun.mac  run.mac
Simulation_Dora/build-cont-t2b/: CMakeCache.txt  Makefile  MuravesSim  cmake_install.cmake  ecomug_config.txt  run.mac
Simulation_Dora/build-cry/: CMakeCache.txt  G4History.macro  Makefile  MuravesSim  MuravesSim_ntuple.root  cmake_install.cmake  cmd-dora.file  cmd.file
Simulation_Dora/build-mat/: CMakeCache.txt  G4History.macro  Makefile  MuravesSim  MuravesSim.root  MuravesSim_Data.root  cmake_install.cmake  gps_beam_center.mac
Simulation_Dora/build-sim/: CMakeCache.txt  Makefile  MuravesSim  MuravesSim_ntuple.root  cmake_install.cmake
Simulation_Dora/build2/: B5.root  B5ntuple.root  CMakeCache.txt  G4History.macro  Makefile  MuravesSim_ntuple.root  cmake_install.cmake  exampleB5
Simulation_Dora/include/: ActionInitialization.hh  BarParameterisation.hh  CellParameterisation.hh  Constants.hh  DetectorConstruction.hh  EcoMug.h  EcomugMessenger.hh  EventAction.hh  Materials.hh  MuSimPhysicsList.hh  MuravesMessenger.hh  PhysicsList.hh  PolystyreneProperties.hh  PrimaryGeneratorAction_EcoMug.hh  PrimaryGeneratorAction_GPS.hh  PrimaryGeneratorAction_PG.hh  PrimaryGeneratorInfo.hh  RunAction.hh  RunInformation.hh  ScintBarHit.hh  ScintBarSD.hh
Simulation_Dora/src/: ActionInitialization.cc  BarParameterisation.cc  DetectorConstruction.cc  DetectorConstruction_new.cc  DetectorConstruction_old.cc  EventAction.cc  Materials.cc  MuSimPhysicsList.cc  MuravesMessenger.cc  PhysicsList.cc  PrimaryGeneratorAction_CRY.cc  PrimaryGeneratorAction_EcoMug.cc  PrimaryGeneratorAction_GPS.cc  PrimaryGeneratorAction_PG.cc  RNGWrapper.cc  RunAction.cc  RunInformation.cc  ScintBarHit.cc  ScintBarSD.cc  SteppingAction.cc  TrackingAction.cc
Time_of_Flight/: tof_readme
Tracking/: README  README.md
data/Vesuvius/: ThicknessesVesuvio_aprile2020_pos0.txt
data/flux_comparison/: CRY_flux_w_proper_normalization.root  READ.md  README.md  readme.txt
macros/: README.md  simTrackFit.C
